scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: scheduler
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scheduler
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: scheduler
    spec:
      containers:
      - env:
        - name: Clients_Command_Host
          value: edgex-core-command
        - name: Clients_CoreData_Host
          value: edgex-core-data
        - name: Clients_Data_Host
          value: edgex-core-data
        - name: Clients_Metadata_Host
          value: edgex-core-metadata
        - name: Clients_Notifications_Host
          value: edgex-support-notifications
        - name: Clients_RulesEngine_Host
          value: edgex-kuiper
        - name: Clients_Scheduler_Host
          value: edgex-support-scheduler
        - name: Databases_Primary_Host
          value: edgex-redis
        - name: EDGEX_SECURITY_SECRET_STORE
          value: "false"
        - name: IntervalActions_ScrubAged_Host
          value: edgex-core-data
        - name: IntervalActions_ScrubPushed_Host
          value: edgex-core-data
        - name: Logging_EnableRemote
          value: "false"
        - name: Registry_Host
          value: edgex-core-consul
        - name: Service_Host
          value: edgex-support-scheduler
        image: edgexfoundry/docker-support-scheduler-go:1.2.1
        imagePullPolicy: ""
        name: edgex-support-scheduler
        ports:
        - containerPort: 48085
        resources: {}
      hostname: edgex-support-scheduler
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
