app-service-mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app-service-mqtt
  name: edgex-app-service-configurable-mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app-service-mqtt
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: app-service-mqtt
    spec:
      containers:
      - env:
        - name: Binding_PublishTopic
          value: events
        - name: Clients_Command_Host
          value: edgex-core-command
        - name: Clients_CoreData_Host
          value: edgex-core-data
        - name: Clients_Data_Host
          value: edgex-core-data
        - name: Clients_Metadata_Host
          value: edgex-core-metadata
        - name: Clients_Notifications_Host
          value: edgex-support-notifications
        - name: Clients_RulesEngine_Host
          value: edgex-kuiper
        - name: Clients_Scheduler_Host
          value: edgex-support-scheduler
        - name: Databases_Primary_Host
          value: edgex-redis
        - name: EDGEX_SECURITY_SECRET_STORE
          value: "false"
        - name: Logging_EnableRemote
          value: "false"
        - name: MessageBus_SubscribeHost_Host
          value: edgex-core-data
        - name: Registry_Host
          value: edgex-core-consul
        - name: Service_Host
          value: edgex-app-service-configurable-mqtt
        - name: Service_Port
          value: "48101"
        - name: WRITABLE_PIPELINE_FUNCTIONS_MQTTSEND_ADDRESSABLE_ADDRESS
          value: broker.hivemq.com
        - name: WRITABLE_PIPELINE_FUNCTIONS_MQTTSEND_ADDRESSABLE_PORT
          value: "1883"
        - name: WRITABLE_PIPELINE_FUNCTIONS_MQTTSEND_ADDRESSABLE_PROTOCOL
          value: tcp
        - name: WRITABLE_PIPELINE_FUNCTIONS_MQTTSEND_ADDRESSABLE_TOPIC
          value: DHT-SENSOR
        - name: WRITABLE_PIPELINE_FUNCTIONS_MQTTSEND_PARAMETERS_AUTORECONNECT
          value: "true"
        - name: WRITABLE_PIPELINE_FUNCTIONS_MQTTSEND_PARAMETERS_PERSISTONERROR
          value: "false"
        - name: WRITABLE_PIPELINE_FUNCTIONS_MQTTSEND_PARAMETERS_RETAIN
          value: "true"
        - name: edgex_profile
          value: mqtt-export
        image: edgexfoundry/docker-app-service-configurable:1.1.0
        imagePullPolicy: ""
        name: edgex-app-service-configurable-mqtt
        ports:
        - containerPort: 48101
        resources: {}
      hostname: edgex-app-service-configurable-mqtt
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app-service-mqtt
  name: edgex-app-service-configurable-mqtt
spec:
  ports:
  - name: "48101"
    port: 48101
    targetPort: 48101
  selector:
    io.kompose.service: app-service-mqtt
status:
  loadBalancer: {}
