data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: data
  name: edgex-core-data
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: data
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: data
    spec:
      containers:
      - env:
        - name: Clients_Command_Host
          value: edgex-core-command
        - name: Clients_CoreData_Host
          value: edgex-core-data
        - name: Clients_Data_Host
          value: edgex-core-data
        - name: Clients_Metadata_Host
          value: edgex-core-metadata
        - name: Clients_Notifications_Host
          value: edgex-support-notifications
        - name: Clients_RulesEngine_Host
          value: edgex-kuiper
        - name: Clients_Scheduler_Host
          value: edgex-support-scheduler
        - name: Databases_Primary_Host
          value: edge-redis
        - name: EDGEX_SECURITY_SECRET_STORE
          value: "false"
        - name: Logging_EnableRemote
          value: "false"
        - name: Registry_Host
          value: edgex-core-consul
        - name: Service_Host
          value: edgex-core-data
        image: edgexfoundry/docker-core-data-go:1.2.1
        imagePullPolicy: ""
        name: edgex-core-data
        ports:
        - containerPort: 48080
        - containerPort: 5563
        resources: {}
      hostname: edgex-core-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: data
  name: edgex-core-data
spec:
  ports:
  - name: "5563"
    port: 5563
    targetPort: 5563
  - name: "48080"
    port: 48080
    targetPort: 48080
  selector:
    io.kompose.service: data
status:
  loadBalancer: {}
