system-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: system
  name: system
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: system
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: system
    spec:
      containers:
      - env:
        - name: Clients_Command_Host
          value: edgex-core-command
        - name: Clients_CoreData_Host
          value: edgex-core-data
        - name: Clients_Data_Host
          value: edgex-core-data
        - name: Clients_Metadata_Host
          value: edgex-core-metadata
        - name: Clients_Notifications_Host
          value: edgex-support-notifications
        - name: Clients_RulesEngine_Host
          value: edgex-kuiper
        - name: Clients_Scheduler_Host
          value: edgex-support-scheduler
        - name: Databases_Primary_Host
          value: edgex-redis
        - name: EDGEX_SECURITY_SECRET_STORE
          value: "false"
        - name: ExecutorPath
          value: /sys-mgmt-executor
        - name: Logging_EnableRemote
          value: "false"
        - name: MetricsMechanism
          value: executor
        - name: Registry_Host
          value: edgex-core-consul
        - name: Service_Host
          value: edgex-sys-mgmt-agent
        image: edgexfoundry/docker-sys-mgmt-agent-go:1.2.1
        imagePullPolicy: ""
        name: edgex-sys-mgmt-agent
        ports:
        - containerPort: 48090
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: system-claim0
      hostname: edgex-sys-mgmt-agent
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: system-claim0
        emptyDir: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: system
  name: system
spec:
  ports:
  - name: "48090"
    port: 48090
    targetPort: 48090
  selector:
    io.kompose.service: system
status:
  loadBalancer: {}
